--- a/backend/README
+++ b/backend/README
@@ -1,6 +1,6 @@
 # TerraGUI - Go Backend
 
-## Prerequeisites
+## Prerequisites
 - **Go**: [Download Go](https://golang.org/dl)
 
 ## Project Structure
